plugins {
  id 'java'
  id 'jacoco'

  id 'org.springframework.boot' version '3.2.2'
  id 'io.spring.dependency-management' version '1.1.4'

  id 'checkstyle'
  id "com.diffplug.spotless" version "6.25.0"
  id "com.github.spotbugs" version "6.0.7"

  id "io.snyk.gradle.plugin.snykplugin" version "0.5.1"
  id "com.github.ben-manes.versions" version "0.51.0"
}

group = 'fi.okm.jod'
version = '0.0.1-SNAPSHOT'

java {
  sourceCompatibility = '21'
}

compileJava {
  options.compilerArgs << '-Xlint:all,-processing,-serial'
}

repositories {
  mavenCentral()
  maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/" }
}

ext {
  spotbugsVersion = "4.8.3"
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-web'

  implementation 'org.springframework.security:spring-security-saml2-service-provider'

  implementation 'io.micrometer:micrometer-tracing-bridge-brave'
  implementation 'io.zipkin.aws:brave-propagation-aws'

  // Logging in JSON format
  implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
  // OpenAPI API description and Swagger UI
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'

  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'

  testImplementation 'org.junit.jupiter:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  testAnnotationProcessor 'org.projectlombok:lombok'

  testCompileOnly 'org.projectlombok:lombok'

  // spotbugs
  implementation "com.github.spotbugs:spotbugs-annotations:$spotbugsVersion"
}

tasks.named('test', Test) {
  useJUnitPlatform()
  jvmArgs += '-XX:+EnableDynamicAgentLoading'
  testLogging {
    events("passed", "skipped", "failed")
  }
}

checkstyle {
  toolVersion = '10.12.7'
  showViolations = false

  def archive = configurations.checkstyle.filter {
    it.name.startsWith("checkstyle")
  }
  config = resources.text.fromArchiveEntry(archive, "google_checks.xml")
}

spotless {
  java {
    googleJavaFormat()
    licenseHeader '''\
    /*
     * Copyright (c) $YEAR The Finnish Ministry of Education and Culture, The Finnish
     * The Ministry of Economic Affairs and Employment, The Finnish National Agency of
     * Education (Opetushallitus) and The Finnish Development and Administration centre
     * for ELY Centres and TE Offices (KEHA).
     *
     * Licensed under the EUPL-1.2-or-later.
     */

     '''.stripIndent()
  }
}

jacoco {
  toolVersion = "0.8.11"
}

test.finalizedBy jacocoTestReport

jacocoTestReport {
  reports.xml.required = true
  reports.html.required = true
}

spotbugs {
  toolVersion = spotbugsVersion
  // excludeFilter = file('config/spotbugs/filter.xml')
}

spotbugsMain {
  reports {
    html {
      required = true
    }
  }
}

spotbugsTest.enabled = false

snyk {
  autoDownload = true
  autoUpdate = true
}

bootJar {
  manifest {
    attributes(
        'Implementation-Title': "${rootProject.name}",
        'Implementation-Version': "${project.version}"
    )
  }
}

springBoot {
  buildInfo {
    excludes = ['time']
  }
}

tasks.register('installGitHooks', Copy) {
  from("${rootProject.rootDir}/scripts/git-hooks") {
    include 'pre-*'
  }
  into "${rootProject.rootDir}/.git/hooks"
  fileMode 0775
}

if (System.getenv("CI") == null) {
  build.dependsOn('installGitHooks')
}
